Fix the z-index for the right sidebar for projects

--- a/app/assets/stylesheets/right_sidebar.css.scss
+++ b/app/assets/stylesheets/right_sidebar.css.scss
@@ -2,7 +2,7 @@
   position: absolute;
   top: 0;
   right: 0;
-  z-index: 1;
+  z-index: 2;
   width: 50px;
   height: 100%;
   padding-top: 70px;
